Fixed spacing issue between boxes with bootstrap g-2 gutters option

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,6 @@ h3 {
 .box-style {
    border: 1px solid #504e4f;
    background: rgba(66, 64, 64, 0.3);
-   margin-bottom: 10px;
    padding: 5px;
 }
 
@@ -185,7 +184,9 @@ p {
 
 .results {
    font-size: 5.45em;
+   margin: -34px;
 }
+
 
 .main-menuitem a i {
    display: block;
@@ -429,11 +430,16 @@ img {
 @media only screen and (max-width: 420px) {
 
    .slider {
-      width: 75%;
+      width: 72%;
    }
    .data {
       width: 100%;
    }
+
+   .results {
+      font-size: 4em;
+      margin: -25px;
+  }
    
 }
 
@@ -542,9 +548,6 @@ footer p {
    text-align: center;
 }
 
-.results-area row>* {
-   padding-right: calc(var(--bs-gutter-x) * .5);
-}
 
 /* ------------- Form elements ------------  */
 
@@ -585,10 +588,6 @@ footer p {
 
 .results-center {
    text-align: center;
-}
-
-.results {
-   margin: -34px;
 }
 
 .newBalance {
